welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:9: error: ';' expected but 'else' found.
 		     else {droite()
                     ^SlugSnail:35: error: '}' expected but eof found.
}
 ^